--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: configure
       run: ./configure
+      
+    - name: CD Frigate Cpp
+      run: cd Frigate-Cpp
+      
     - name: make
       run: make
     - name: make check
